--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,13 @@ body{
 
 
 .overview{
-  background-attachment: fixed; /* Parallax effect */     
+  background-attachment: fixed; /* Parallax effect */
   background-position: center;  /* Parallax effect */
   background-repeat: no-repeat; /* Parallax effect */
   background-size: cover;       /* Parallax effect */
   color: white;
   height: 400px;                /* Parallax effect */
 }
-
 
 .overview p{
   color: white;
@@ -65,7 +64,7 @@ nav a{
 
 nav{
   background-color: #ddd;
-  padding: 25px 0; 
+  padding: 25px 0;
   text-align: left;
 }
 
@@ -108,47 +107,156 @@ footer{
 /* Step 1: Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
 
+nav a:hover{
+  text-decoration: underline;
+}
+
+a:focus {
+  text-decoration: underline;
+}
 
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
-
+.skip{
+  position: absolute;
+  top: -40px;
+}
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
+.skip a:focus {
+  top: 20px; /* Position below parent when in focus */
+}
 
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
-
+*:focus {
+  border: 2px solid;
+}
 
 
 /* Step 4: Write selector/rule property to style the container */
+.container{
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  grid-gap: 15px;
+}
 
 
-/* Step 5: Write selector/rule property to add the background image to the 
-first div in the grid  and place it in the grid. */
+/* Step 5: Write selector/rule property to add the background image to the first div in the grid and place it in the grid. */
+.container > :first-child {
+  grid-column: 1 / -1;
+  background-image: url('../images/header.jpg'); /* Path to your image */
+  background-attachment: fixed; /* Center the background image */
+  background-size: cover; /* Cover the entire background */
+}
 
 
+/* .overview{
+  grid-column: 1 / -1;
+} */
 
-/* Steps 6 and 7: Write the selector/rule properties to add place the next elements in the next
- four rows in the grid. */
+/* Steps 6 and 7: Write the selector/rule properties to add place the next elements in the next four rows in the grid. */
 
       /*This will be a lot of rules.... but be strategic and combine seletors*/
+.about,
+.method,
+.clients,
+.contact{
+  grid-column: 2 / span 1;
+}
 
+.about{
+  grid-row: 2;
+}
+
+.method{
+  grid-row: 3;
+}
+
+.clients{
+  grid-row: 4;
+}
+
+.contact{
+  grid-row: 5;
+}
+
+.about-image,
+.method-image,
+.clients-image,
+.contact-image{
+  grid-column: 1 / -1;
+  max-height: 600px;
+  overflow: hidden;
+}
+
+.about-image{
+  grid-row: 2;
+}
+
+.method-image{
+  grid-row: 3;
+}
+
+.clients-image{
+  grid-row: 4;
+}
+
+.contact-image{
+  grid-row: 5;
+}
 
  /* Step 8: Write the selector/rule property to style the .text-block class. */
+.text-block{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+}
+
+
+
 
 
 /* Add your media query here */
-
+@media screen and (min-width: 800px){
 
   /* Step 9: Write the selector/rule property to style the nav element */
+nav{
+  text-align: right;
+  padding: 30px 0px 30px 0px;
+}
 
- 
+nav li{
+  display:inline;
+  align-items:right;
+}
+
   /* Step 10: Write the selector/rule property to update the .container class */
-
+.container{
+  display: grid;
+  grid-template-columns: 50px auto 500px auto 50px;
+}
 
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
+.about,
+.clients,
+.method-image,
+.contact-image{
+  grid-column: 3 / span 2;
+}
 
+.method,
+.contact,
+.about-image,
+.clients-image{
+  grid-column: 2 / span 2;
+}
 
 
  /* Step 13:Write the selector/rule property to update the .text-block class */
-
+ .text-block{
+  max-height: 250px;
+  overflow: auto; /* Ensure content that goes outside the grid cell is still reachable */
+}
+}
